# sigmod23ann

./: .gitignore  CMakeLists.txt  README.md  grade.cpp  io.h  issues.md  knn-construction.cc  knng  main.cpp  makefile  note.md  run.sh  scratch.hpp
scripts/: bloom_size.py  pca.py  plot_knn.py  plot_results.py
src/: Constants.hpp  KmeansSolution.hpp  KnnSets.hpp  LinearAlgebra.hpp  SolutionKmeans.hpp  SolutionRandomKD.hpp  SolutionRandomKDTree.hpp  Spinlock.hpp  Utility.hpp  ann.hpp  grade.cpp  io.h  main.cpp
test/: TestKnnSet.cpp
